Changelog
=========

1.6b2 (unreleased)

- Remove obsolete actions from the type configuration.  This closes issue #16.
  [davisagli]

- Allow mapping the filename and mimetype of file uploads to fields in SFDC
  (probably on an Attachment object) in addition to the data itself.
  [davisagli]

- Added ability to view and update values from existing Salesforce objects,
  found by matching an arbitrary expression.
  [davisagli]

- Restored Plone 2.5 support and added compatibility with Plone 4.
  [davisagli]

- Added a 'Preset field values' setting so that hardcoded values can be mapped
  to Salesforce fields without having to create a hidden form field. Thanks to
  Jon Stahl for the suggestion.
  [davisagli]

1.6b1 (2009-09-08)

- Adjust calls to the salesforcebaseconnector query method to use a single
  full SOQL statement.  beatbox >= 16.0dev is now required.
  [davisagli]

- Use the field id instead of title as the key column for the field mapping,
  so that it's possible to set the mapping programmatically without worrying
  about the titles.
  [davisagli]

- Cut out duplicate setup code and unnecessary API calls throughout testing
  with use of onsetup decorator.
  [andrewb]

- Move substantial portions of package installation to GenericSetup.
  [andrewb]

- No longer supporting Plone 2.5, pull out all the complex workarounds 
  associated with support older version.
  [andrewb]

- Added metadata.xml to GenericSetup profile.
  [andrewb]


1.5.2 - released August 13, 2009

- Fix broken release.
  [davisagli]

1.5.1 - released August 12, 2009

- Fix for issue #13, whereby hitting the next button while editing a
  Salesforce Adapter with PloneFormGen 1.5b2 redirected off to the Form 
  Folder's Quick Edit UI, rather than the field mapping UI as expected.
  [andrewb]

1.5  - released February 18, 2009

- Clean-up of overly long lines (e.g. > 80 chars) in README.txt 
  [andrewb]

1.5rc1

- Added information about known issue #30 within dependency DataGridField.